# customer_demos

LCD/8080/st7789_240_320/: .gitignore  sdkconfig.defaults  sdkconfig.old
LCD/8080/st7789_240_320/main/: lcd_panel_st7789.c  main.c
LCD/8080/st7796_480_240/: .gitignore
LCD/8080/st7796_480_240/main/: lvgl_demo_ui.c  main.c
LCD/8080/st7796_480_320/: CMakeLists.txt  README.md  sdkconfig.defaults
LCD/8080/st7796_480_320/main/: CMakeLists.txt  lcd_panel_st7796.c
LCD/SPI/GC9A01_240_240_Round/: CMakeLists.txt  README.md
LCD/SPI/GC9A01_240_240_Round/main/: CMakeLists.txt  lcd_panel_gc9a01.c  main.c
LCD/SPI/st7789_240_320/: CMakeLists.txt
LCD/SPI/st7789_240_320/main/: CMakeLists.txt  main.c
